@@ -2,6 +2,8 @@ package com.example.luigi.controleacademico.Model;
 
 import android.support.annotation.NonNull;
 
+import static com.example.luigi.controleacademico.Constants.LOCALE_BRAZIL;
+
 /**
  * Created by Luigi on 12/12/2017.
  */
@@ -17,9 +19,21 @@ public class Data implements Comparable<Data> {
     }
 
     public Data(String aaaa_mm_dd) {
-        this.ano = new Integer(aaaa_mm_dd.substring(0, 4));
-        this.mes = new Integer(aaaa_mm_dd.substring(5, 7));
-        this.dia = new Integer(aaaa_mm_dd.substring(8, 10));
+        this.ano = Integer.valueOf(aaaa_mm_dd.substring(0, 4));
+        this.mes = Integer.valueOf(aaaa_mm_dd.substring(5, 7));
+        this.dia = Integer.valueOf(aaaa_mm_dd.substring(8, 10));
+    }
+
+    public int getDia() {
+        return dia;
+    }
+
+    public int getMes() {
+        return mes;
+    }
+
+    public int getAno() {
+        return ano;
     }
 
     @Override
@@ -36,17 +50,17 @@ public class Data implements Comparable<Data> {
 
     @Override
     public int compareTo(@NonNull Data o) {
-        if(ano != o.ano) return new Integer(ano).compareTo(o.ano);
-        if(mes != o.mes) return new Integer(mes).compareTo(o.mes);
-        return new Integer(dia).compareTo(o.dia);
+        if(ano != o.ano) return Integer.valueOf(ano).compareTo(o.ano);
+        if(mes != o.mes) return Integer.valueOf(mes).compareTo(o.mes);
+        return Integer.valueOf(dia).compareTo(o.dia);
     }
 
     @Override
     public String toString() {
-        return String.format("%04d-%02d-%02d", ano, mes, dia);
+        return String.format(LOCALE_BRAZIL, "%04d-%02d-%02d", ano, mes, dia);
     }
 
     public String string_dd_mm() {
-        return String.format("%02d/%02d", dia, mes);
+        return String.format(LOCALE_BRAZIL, "%02d/%02d", dia, mes);
     }
 }
